--- a/index.html
+++ b/index.html
@@ -41,138 +41,165 @@
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
-                >ABOUT</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
-            </li>
-          </ul>
+    <main>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/about.html"
+                  >ABOUT</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact.html">CONTACT</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <div class="hero-section">
-      <div class="row">
-        <div class="col hero-picture-section">
-          <img
-            src="images/Hello.svg"
-            class="hero-picture img-fluid"
-            alt="hello greeting"
-          />
-        </div>
-        <div class="col introduction">
-          <div>
-            <h1>Nice to meet you!</h1>
-            <p>
-              My name is Aisha Natividad and I'm an aspiring front-end developer
-              based in the USA.
-            </p>
-            <br class="hero-break" />
-            <div class="hero-buttons">
-              <a class="hero-portfolio-btn text-center" href="/portfolio.html">
-                My Portfolio
-              </a>
-              <a class="hero-contact-btn text-center" href="contact.html"
-                >Contact Me</a
-              >
+      </nav>
+      <section class="hero-section">
+        <div class="row">
+          <div class="col hero-picture-section">
+            <img
+              src="images/Hello.svg"
+              class="hero-picture img-fluid"
+              alt="hello greeting"
+            />
+          </div>
+          <div class="col introduction">
+            <div>
+              <h1>Nice to meet you!</h1>
+              <p>
+                My name is Aisha Natividad and I'm an aspiring front-end
+                developer based in the USA.
+              </p>
+              <br class="hero-break" />
+              <div class="hero-buttons">
+                <a
+                  class="hero-portfolio-btn text-center"
+                  href="/portfolio.html"
+                >
+                  My Portfolio
+                </a>
+                <a class="hero-contact-btn text-center" href="contact.html"
+                  >Contact Me</a
+                >
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row home-about-section">
-      <div class="col home-about-picture-section">
-        <img
-          src="images/RECOERY.svg"
-          class="home-about-picture img-fluid"
-          alt="brain image"
-        />
-      </div>
-      <div class="col">
-        <h2>"What is marketing?"</h2>
-        <p>
-          I asked this question continuously throughout my college career and I
-          quickly learned that marketing is a dynamic component that encompasses
-          endless paths of opportunity. So throughout college, I strived to
-          expose myself to as many departments of marketing as possible: from
-          business development to PR to directing a team of students in a
-          non-profit dance marathon!
-          <span class="desktop-description">
-            However, my journey towards being a front-end developer sparked when
-            I launched my career as a Marketing Specialist at Mockingbird
-            Marketing. A task as simple as editing an H1 peaked my curiousity
-            and made me question, "What else can I edit?"
-          </span>
-        </p>
-        <a href="about.html" class="home-learn-more-link">Learn more →</a>
-      </div>
-    </div>
-    <footer>
-      <div class="lets-connect text-center">
-        <h2>Let's Connect</h2>
-        <br />
-        <div class="row">
-          <div class="col">
-            <h3>Portfolio</h3>
-            <a href="portfolio.html" class="socials"
-              ><i class="fas fa-folder-open fa-5x"></i
-            ></a>
-            <p class="social-CTA">Check out some of my work</p>
-          </div>
-          <div class="col">
-            <h3>Contact</h3>
-            <a href="mailto:aisha.belmonte@gmail.com" class="socials">
-              <i class="fas fa-envelope fa-5x"></i>
-            </a>
-            <p class="social-CTA">
-              Interested in working together? <br />
-              Send me an email!
-            </p>
-          </div>
-          <div class="col">
-            <h3>LinkedIn</h3>
-            <a
-              href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
-              target="_blank"
-              class="socials"
-            >
-              <i class="fab fa-linkedin fa-5x"></i
-            ></a>
-            <p class="social-CTA">Stay connected with me on LinkedIn</p>
-          </div>
+      </section>
+      <section class="row home-portfolio-section">
+        <div class="col home-portfolio-text">
+          <h2>Portfolio</h2>
+          <p>
+            Within the past few months, I've built a few applications using
+            advanced HTML, CSS and Javascript (React). I've also implemented
+            various search engine optimization techniques and responsive designs
+            using Bootstrap and Flexbox to improve user engagement and
+            experience. Check out my work below!
+          </p>
+          <a href="portfolio.html" class="home-learn-more-link"
+            >View portfolio →</a
+          >
         </div>
-        <br />
-        <h5>
-          This website was coded by Aisha Natividad and is
-          <a
-            href="https://github.com/abelmontea/Portfolio-Aisha"
-            target="_blank"
-            class="open-source-link"
-            >open-sourced
-          </a>
-        </h5>
-      </div>
-    </footer>
+        <div class="col home-porfolio-picture">
+          <img
+            src="images/Lightbulb.png"
+            class="home-portfolio-picture img-fluid"
+            alt="lightbulb image"
+          />
+        </div>
+      </section>
+      <section class="row home-about-section">
+        <div class="col home-about-picture-section">
+          <img
+            src="images/RECOERY.svg"
+            class="home-about-picture img-fluid"
+            alt="brain image"
+          />
+        </div>
+        <div class="col home-about-section-text">
+          <h2>"What is marketing?"</h2>
+          <p>
+            I asked this question continuously throughout my college career and
+            I quickly learned that marketing is a dynamic component that
+            encompasses endless paths of opportunity. So throughout college, I
+            strived to expose myself to as many departments of marketing as
+            possible: from business development to PR to directing a team of
+            students in a non-profit dance marathon!
+            <span class="desktop-description">
+              However, my journey towards being a front-end developer sparked
+              when I launched my career as a Marketing Specialist at Mockingbird
+              Marketing. A task as simple as editing an H1 peaked my curiousity
+              and made me question, "What else can I edit?"
+            </span>
+          </p>
+          <a href="about.html" class="home-learn-more-link">Learn more →</a>
+        </div>
+      </section>
+      <footer class="dark-footer">
+        <div class="lets-connect text-center">
+          <h2>Let's Connect</h2>
+          <br />
+          <div class="row">
+            <div class="col">
+              <h3>Portfolio</h3>
+              <a href="portfolio.html" class="about-socials"
+                ><i class="fas fa-folder-open fa-5x"></i
+              ></a>
+              <p class="social-CTA">Check out some of my work</p>
+            </div>
+            <div class="col">
+              <h3>Contact</h3>
+              <a href="mailto:aisha.belmonte@gmail.com" class="about-socials">
+                <i class="fas fa-envelope fa-5x"></i>
+              </a>
+              <p class="social-CTA">
+                Interested in working together? <br />
+                Send me an email!
+              </p>
+            </div>
+            <div class="col">
+              <h3>LinkedIn</h3>
+              <a
+                href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+                target="_blank"
+                class="about-socials"
+              >
+                <i class="fab fa-linkedin fa-5x"></i
+              ></a>
+              <p class="social-CTA">Stay connected with me on LinkedIn</p>
+            </div>
+          </div>
+          <br />
+          <h5>
+            This website was coded by Aisha Natividad and is
+            <a
+              href="https://github.com/abelmontea/Portfolio-Aisha"
+              target="_blank"
+              class="open-source-link"
+              >open-sourced
+            </a>
+          </h5>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
