--- a/about.html
+++ b/about.html
@@ -41,137 +41,142 @@
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/about.html"
-                >ABOUT</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="row about-me-introduction">
-      <div class="col about-me-introduction-picture">
-        <img src="images/plane.png" class="img-fluid" alt="plane" />
-      </div>
-      <div class="col about-me-introduction-blurb">
-        <h1 class="about-me-header">An Untraditional Path</h1>
-        <h3>From Hawai'i to Seattle to wherever the wind blows next</h3>
-        <p>
-          With a double major in Marketing and Management and a minor in
-          Innovation and Entrepreneurship, I was ready to dive into the world of
-          marketing with the goal of meeting people, running accounts and
-          strategizing success. Being exposed to website development in current
-          role, however, led to an endless rabbit hole full of challenges that
-          began to excite and inspire me. While I had never seen myself as a
-          front-end developer, I’m glad I took a leap of faith with Shecodes.io
-          and began learning because it’s a career path that has everything I
-          ever imagined and more: logical thinking, creative problem-solving and
-          a constantly changing environment. So bring your marketing needs and
-          let's see what I can create for you!
-        </p>
-      </div>
-    </div>
-    <div class="row about-me-linkedin-section">
-      <div class="col about-me-recommendations">
-        <h2>LinkedIn Recommendations</h2>
-        <p>
-          <i>
-            " I had the privilege to supervise, advise, and mentor Aisha during
-            her time as the Director of Communications for Seattle University
-            Dance Marathon. Aisha is a passionate, thoughtful, and meticulous
-            leader. She demonstrates the balance between professionalism and
-            being able to truly have fun in her work; which is important! It has
-            been a joy to witness her growth over the past year and I am
-            confident that Aisha will be an excellent asset to any profession or
-            career she chooses to pursue. "
-          </i>
-        </p>
-        <h3>- De'Andre Jones, M.Ed.</h3>
-        <div class="more-recommendations">
-          <a
-            href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
-            target="_blank"
-            class="more-recommendations-link"
-            >See more recommendations →</a
+    <main>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
           >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/about.html"
+                  >ABOUT</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact.html">CONTACT</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col about-me-recommendation-picture">
-        <img
-          src="images/ThankYou.svg"
-          class="linkedin-picture img-fluid"
-          alt="thumbs up"
-        />
-      </div>
-    </div>
-    <footer class="dark-footer">
-      <div class="lets-connect text-center">
-        <h2>Let's Connect</h2>
-        <br />
-        <div class="row">
-          <div class="col">
-            <h3>Portfolio</h3>
-            <a href="portfolio.html" class="about-socials"
-              ><i class="fas fa-folder-open fa-5x"></i
-            ></a>
-            <p class="social-CTA">Check out some of my work</p>
-          </div>
-          <div class="col">
-            <h3>Contact</h3>
-            <a href="mailto:aisha.belmonte@gmail.com" class="about-socials">
-              <i class="fas fa-envelope fa-5x"></i>
-            </a>
-            <p class="social-CTA">
-              Interested in working together? <br />
-              Send me an email!
-            </p>
-          </div>
-          <div class="col">
-            <h3>LinkedIn</h3>
+      </nav>
+      <section class="row about-me-introduction">
+        <div class="col about-me-introduction-picture">
+          <img src="images/plane.png" class="img-fluid" alt="plane" />
+        </div>
+        <div class="col about-me-introduction-blurb">
+          <h1 class="about-me-header">An Untraditional Path</h1>
+          <h3>From Hawai'i to Seattle to wherever the wind blows next</h3>
+          <p>
+            With a double major in Marketing and Management and a minor in
+            Innovation and Entrepreneurship, I was ready to dive into the world
+            of marketing with the goal of meeting people, running accounts and
+            strategizing success. Being exposed to website development in
+            current role, however, led to an endless rabbit hole full of
+            challenges that began to excite and inspire me. While I had never
+            seen myself as a front-end developer, I’m glad I took a leap of
+            faith with Shecodes.io and began learning because it’s a career path
+            that has everything I ever imagined and more: logical thinking,
+            creative problem-solving and a constantly changing environment. So
+            bring your marketing needs and let's see what I can create for you!
+          </p>
+        </div>
+      </section>
+      <section class="row about-me-linkedin-section">
+        <div class="col about-me-recommendations">
+          <h2>LinkedIn Recommendations</h2>
+          <p>
+            <i>
+              " Aisha was as sharp as they come in a junior-level role. Fueled
+              by curiosity, she went above and beyond on any task thrown at her.
+              She had basically zero knowledge of web development and technical
+              marketing skills like SEO, but managed to write custom codes and
+              scripts, then easily integrate them into client-facing sites
+              within weeks of joining the team. It was an honor to watch someone
+              grow so quickly and I can't wait to see what she accomplishes.
+              There is no better hire to any team. "
+            </i>
+          </p>
+          <h3>- Branden Youngs</h3>
+          <div class="more-recommendations">
             <a
               href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
               target="_blank"
-              class="about-socials"
+              class="more-recommendations-link"
+              >See more recommendations →</a
             >
-              <i class="fab fa-linkedin fa-5x"></i
-            ></a>
-            <p class="social-CTA">Stay connected with me on LinkedIn</p>
           </div>
         </div>
-        <br />
-        <h5>
-          This website was coded by Aisha Natividad and is
-          <a
-            href="https://github.com/abelmontea/Portfolio-Aisha"
-            target="_blank"
-            class="open-source-link"
-            >open-sourced
-          </a>
-        </h5>
-      </div>
-    </footer>
+        <div class="col about-me-recommendation-picture">
+          <img
+            src="images/ThankYou.svg"
+            class="linkedin-picture img-fluid"
+            alt="thumbs up"
+          />
+        </div>
+      </section>
+      <footer class="dark-footer">
+        <div class="lets-connect text-center">
+          <h2>Let's Connect</h2>
+          <br />
+          <div class="row">
+            <div class="col">
+              <h3>Portfolio</h3>
+              <a href="portfolio.html" class="about-socials"
+                ><i class="fas fa-folder-open fa-5x"></i
+              ></a>
+              <p class="social-CTA">Check out some of my work</p>
+            </div>
+            <div class="col">
+              <h3>Contact</h3>
+              <a href="mailto:aisha.belmonte@gmail.com" class="about-socials">
+                <i class="fas fa-envelope fa-5x"></i>
+              </a>
+              <p class="social-CTA">
+                Interested in working together? <br />
+                Send me an email!
+              </p>
+            </div>
+            <div class="col">
+              <h3>LinkedIn</h3>
+              <a
+                href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+                target="_blank"
+                class="about-socials"
+              >
+                <i class="fab fa-linkedin fa-5x"></i
+              ></a>
+              <p class="social-CTA">Stay connected with me on LinkedIn</p>
+            </div>
+          </div>
+          <br />
+          <h5>
+            This website was coded by Aisha Natividad and is
+            <a
+              href="https://github.com/abelmontea/Portfolio-Aisha"
+              target="_blank"
+              class="open-source-link"
+              >open-sourced
+            </a>
+          </h5>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
