--- a/portfolio.html
+++ b/portfolio.html
@@ -43,163 +43,170 @@
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
-                >ABOUT</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/portfolio.html">PORTFOLIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="row portfolio-header">
-      <div class="col">
-        <h1 class="text-center mb-3">Examples of my work</h1>
-
-        <div
-          id="carouselExampleDark"
-          class="carousel carousel-dark slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleDark"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleDark"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
+    <main>
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/about.html"
+                  >ABOUT</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/portfolio.html">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact.html">CONTACT</a>
+              </li>
+            </ul>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img
-                src="/images/CLAPPING.png
-          "
-                class="d-block w-40"
-                alt="hands"
-              />
-              <div class="carousel-caption d-md-block">
-                <div class="light-text-background">
-                  <h2>Custom Keyboard Building</h2>
-                  <a
-                    href="https://hungry-bartik-e3958a.netlify.app/"
-                    target="_blank"
-                    class="examples-link"
-                    >Read more about the hobby and my journey</a
-                  >
+        </div>
+      </nav>
+      <section class="row portfolio-header">
+        <div class="col">
+          <h1 class="text-center mb-3">Examples of my work</h1>
+          <div
+            id="carouselExampleDark"
+            class="carousel carousel-dark slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img
+                  src="/images/CLAPPING.png
+            "
+                  class="d-block w-40"
+                  alt="hands"
+                />
+                <div class="carousel-caption d-md-block">
+                  <div class="light-text-background">
+                    <h2>Custom Keyboard Building</h2>
+                    <a
+                      href="https://hungry-bartik-e3958a.netlify.app/"
+                      target="_blank"
+                      class="examples-link"
+                      >Read more about the hobby and my journey</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="10000">
+                <img src="/images/boot.png" class="d-block w-40" alt="boots" />
+                <div class="carousel-caption d-md-block">
+                  <div class="light-text-background">
+                    <h2>What's the Weather Today?</h2>
+                    <a
+                      href="https://suspicious-rosalind-4eb89f.netlify.app/"
+                      target="_blank"
+                      class="examples-link"
+                      >Check out this weather app I built!</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="10000">
-              <img src="/images/boot.png" class="d-block w-40" alt="boots" />
-              <div class="carousel-caption d-md-block">
-                <div class="light-text-background">
-                  <h2>What's the Weather Today?</h2>
-                  <a
-                    href="https://zealous-fermat-0b0ab0.netlify.app/"
-                    target="_blank"
-                    class="examples-link"
-                    >Check out this weather app I built!</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleDark"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleDark"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <div class="lets-connect text-center">
-        <h2>Let's Connect</h2>
-        <br />
-        <div class="row">
-          <div class="col">
-            <h3>Portfolio</h3>
-            <a href="portfolio.html" class="socials"
-              ><i class="fas fa-folder-open fa-5x"></i
-            ></a>
-            <p class="social-CTA">Check out some of my work</p>
-          </div>
-          <div class="col">
-            <h3>Contact</h3>
-            <a href="mailto:aisha.belmonte@gmail.com" class="socials">
-              <i class="fas fa-envelope fa-5x"></i>
-            </a>
-            <p class="social-CTA">
-              Interested in working together? <br />
-              Send me an email!
-            </p>
-          </div>
-          <div class="col">
-            <h3>LinkedIn</h3>
-            <a
-              href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
-              target="_blank"
-              class="socials"
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev"
             >
-              <i class="fab fa-linkedin fa-5x"></i
-            ></a>
-            <p class="social-CTA">Stay connected with me on LinkedIn</p>
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
-        <br />
-        <h5>
-          This website was coded by Aisha Natividad and is
-          <a
-            href="https://github.com/abelmontea/Portfolio-Aisha"
-            target="_blank"
-            class="open-source-link"
-            >open-sourced
-          </a>
-        </h5>
-      </div>
-    </footer>
+      </section>
+      <footer>
+        <div class="lets-connect text-center">
+          <h2>Let's Connect</h2>
+          <br />
+          <div class="row">
+            <div class="col">
+              <h3>Portfolio</h3>
+              <a href="portfolio.html" class="socials"
+                ><i class="fas fa-folder-open fa-5x"></i
+              ></a>
+              <p class="social-CTA">Check out some of my work</p>
+            </div>
+            <div class="col">
+              <h3>Contact</h3>
+              <a href="mailto:aisha.belmonte@gmail.com" class="socials">
+                <i class="fas fa-envelope fa-5x"></i>
+              </a>
+              <p class="social-CTA">
+                Interested in working together? <br />
+                Send me an email!
+              </p>
+            </div>
+            <div class="col">
+              <h3>LinkedIn</h3>
+              <a
+                href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+                target="_blank"
+                class="socials"
+              >
+                <i class="fab fa-linkedin fa-5x"></i
+              ></a>
+              <p class="social-CTA">Stay connected with me on LinkedIn</p>
+            </div>
+          </div>
+          <br />
+          <h5>
+            This website was coded by Aisha Natividad and is
+            <a
+              href="https://github.com/abelmontea/Portfolio-Aisha"
+              target="_blank"
+              class="open-source-link"
+              >open-sourced
+            </a>
+          </h5>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
